fix(ui): increase max-width of container on rtmp stats page

--- a/html/style.css
+++ b/html/style.css
@@ -451,6 +451,10 @@ body.stats-page .footer {
     color: #666;
 }
 
+body.stats-page .container {
+    max-width: 1500px;
+}
+
 .server-metrics {
     width: 100%;
     max-width: 100%;
